add evaluate notebook

--- a/notebooks/raw-data-exploration.ipynb
+++ b/notebooks/raw-data-exploration.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-13T17:58:07.662128Z",
-     "start_time": "2025-09-13T17:58:07.658730Z"
+     "end_time": "2025-09-14T12:14:28.499840Z",
+     "start_time": "2025-09-14T12:14:28.120733Z"
     }
    },
    "source": [
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -159,15 +159,148 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T17:58:07.972561Z",
-     "start_time": "2025-09-13T17:58:07.969964Z"
+     "end_time": "2025-09-14T12:14:30.452375Z",
+     "start_time": "2025-09-14T12:14:30.448274Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "test_dataset = pd.read_csv('../data/groundtruth/csv/test_big_size_A_B_E_K_WH_WB_points.csv')",
    "id": "cd327b2d541150c1",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-14T12:14:35.370704Z",
+     "start_time": "2025-09-14T12:14:35.360580Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "test_dataset.head()",
+   "id": "6f73a39b56be2ba",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                    images       x       y  labels\n",
+       "0  S_07_05_16_DSC00094.JPG  5862.5   626.5       3\n",
+       "1  S_07_05_16_DSC00162.JPG  1029.0   665.5       2\n",
+       "2  S_07_05_16_DSC00162.JPG   806.0   610.0       2\n",
+       "3  S_07_05_16_DSC00163.JPG  1305.0  2797.0       2\n",
+       "4  S_07_05_16_DSC00163.JPG  1082.5  2744.0       2"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>images</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S_07_05_16_DSC00094.JPG</td>\n",
+       "      <td>5862.5</td>\n",
+       "      <td>626.5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S_07_05_16_DSC00162.JPG</td>\n",
+       "      <td>1029.0</td>\n",
+       "      <td>665.5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S_07_05_16_DSC00162.JPG</td>\n",
+       "      <td>806.0</td>\n",
+       "      <td>610.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>S_07_05_16_DSC00163.JPG</td>\n",
+       "      <td>1305.0</td>\n",
+       "      <td>2797.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>S_07_05_16_DSC00163.JPG</td>\n",
+       "      <td>1082.5</td>\n",
+       "      <td>2744.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-14T12:14:43.593885Z",
+     "start_time": "2025-09-14T12:14:43.590373Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "labels_test = test_dataset['labels'].value_counts()\n",
+    "print(labels_test)"
+   ],
+   "id": "7d6bda55b73b677c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "labels\n",
+      "6    688\n",
+      "1    675\n",
+      "3    477\n",
+      "2    349\n",
+      "4     74\n",
+      "5     36\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c5a3b0fdc25ec1"
   }
  ],
  "metadata": {
